--- a/test/src/test/resources/testConfig.properties
+++ b/test/src/test/resources/testConfig.properties
@@ -34,7 +34,7 @@ MongoDB_mock=127.0.0.1#27017#MongoDB#has_data=false
 Redis_mock=127.0.0.1#6379#Redis#has_data=false#is_read_only=false#timeout=5000
 ## for mysql: meta_properties_path param can be removed here from next commit(for tpc-h test which will use old version of IGinX)
 MySQL_mock=127.0.0.1#3306#relational#engine=mysql#has_data=false#username=root#meta_properties_path=../dataSource/relational/src/main/resources/mysql-meta-template.properties
-VectorDB_mock=127.0.0.1#19530#VectorDB#protocol=grpc#has_data=false#is_read_only=false#timeout=5000
+VectorDB_mock=172.25.92.184#19530#VectorDB#protocol=grpc#has_data=false#is_read_only=false#timeout=5000
 
 # class name for each DB
 IoTDB12_class=cn.edu.tsinghua.iginx.iotdb.IoTDBStorage
@@ -67,8 +67,8 @@ MySQL_port=3306,3307,3308
 VectorDB_port=19530,19531,19532
 
 # Local test stand-alone
-stand_alone_DB=IoTDB12
-#stand_alone_DB=VectorDB
+#stand_alone_DB=IoTDB12
+stand_alone_DB=VectorDB
 
 # Local test DB-CE
 is_scaling=false
