--- a/dataSource/vectordb/pom.xml
+++ b/dataSource/vectordb/pom.xml
@@ -27,6 +27,11 @@
             <artifactId>iginx-shared</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.24.0</version>
+        </dependency>
+        <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.10.1</version>
