--- a/.github/actions/docker-compose/action.yml
+++ b/.github/actions/docker-compose/action.yml
@@ -32,6 +32,7 @@ runs:
 
       - if: runner.os == 'Linux'
         name: Install Docker Compose
+        shell: bash
         run: |
           DOCKER_COMPOSE_VERSION=v2.30.1
           sudo curl -L "https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
