--- a/.github/workflows/standalone-test.yml
+++ b/.github/workflows/standalone-test.yml
@@ -17,7 +17,8 @@ on:
                 description: "The operating system to run the test on"
                 type: string
                 required: false
-                default: '["ubuntu-latest", "macos-latest", "windows-latest"]'
+#                default: '["ubuntu-latest", "macos-latest", "windows-latest"]'
+                default: '["ubuntu-latest"]'
             metadata-matrix:
                 description: "The metadata to run the test on"
                 type: string
@@ -50,10 +51,10 @@ jobs:
                   python-version: ${{ matrix.python-version }}
                   java: ${{ matrix.java }}
 
-            - name: Run Metadata
-              uses: ./.github/actions/metadataRunner
-              with:
-                  metadata: ${{ matrix.metadata }}
+#            - name: Run Metadata
+#              uses: ./.github/actions/metadataRunner
+#              with:
+#                  metadata: ${{ matrix.metadata }}
 
             - name: Run DB
               uses: ./.github/actions/dbRunner
