--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -68,6 +68,10 @@
             <groupId>cn.edu.tsinghua</groupId>
             <artifactId>redis</artifactId>
         </dependency>
+        <dependency>
+            <groupId>cn.edu.tsinghua</groupId>
+            <artifactId>vectordb</artifactId>
+        </dependency>
     </dependencies>
 
     <profiles>
