--- a/.github/workflows/standalone-test.yml
+++ b/.github/workflows/standalone-test.yml
@@ -59,6 +59,22 @@ jobs:
               with:
                   DB-name: ${{ matrix.DB-name }}
 
+            - name: Download DM JDBC Driver from IGinX resources
+              run: |
+                wget -O JAVA_Mybatis.zip https://github.com/IGinX-THU/IGinX-resources/raw/main/resources/JAVA_Mybatis.zip
+                unzip JAVA_Mybatis.zip -d JAVA_Mybatis
+              shell: bash
+
+            - name: Install DM JDBC Driver with Maven
+              run: |
+                mvn install:install-file \
+                -DgroupId=com.dm \
+                -DartifactId=DmJdbcDriver \
+                -Dversion=1.8.0 \
+                -Dpackaging=jar \
+                -Dfile=JAVA_Mybatis/DmJdbcDriver18.jar
+              shell: bash
+
             - name: Install IGinX with Maven
               shell: bash
               run: |
