feat: add dm datasource

--- a/.github/workflows/standalone-test.yml
+++ b/.github/workflows/standalone-test.yml
@@ -59,17 +59,10 @@ jobs:
               with:
                   DB-name: ${{ matrix.DB-name }}
 
-            - name: Download DM JDBC Driver from IGinX resources
+            - name: Download and Install DM JDBC Driver
               run: |
                   wget -O JAVA_Mybatis.zip https://github.com/IGinX-THU/IGinX-resources/raw/main/resources/JAVA_Mybatis.zip
                   unzip JAVA_Mybatis.zip -d JAVA_Mybatis
-                  echo "Extracted files are in:"
-                  pwd
-                  ls JAVA_Mybatis
-              shell: bash
-
-            - name: Install DM JDBC Driver with Maven
-              run: |
                   mvn install:install-file \
                   -DgroupId=com.dm \
                   -DartifactId=DmJdbcDriver \
