feat: add dm datasource

--- a/.github/actions/setup/dm/action.yml
+++ b/.github/actions/setup/dm/action.yml
@@ -32,18 +32,16 @@ runs:
               docker run -d -p 5236:5236 --name dm8 \
               --restart=always --privileged=true \
               -e PAGE_SIZE=16 \
-              -e UNICODE_FLAG=1 \
+              -e CHARSET=1 \
               -e LENGTH_IN_CHAR=1 \
               -e CASE_SENSITIVE=0 \
               -e SYSDBA_PWD='SYSDBA' \
-              -e LD_LIBRARY_PATH=/opt/dmdbms/bin \
-              -e INSTANCE_NAME=dm8_instance \
-              -v /opt/dm8:/opt/dmdbms/data \
-              sizx/dm8:1-2-128-22.08.04-166351-20005-CTM
+              -v /opt/dm8:/home/dmdba/data \
+              sizx/dm8
           shell: bash
 
         - name: Verify DM Database is running
           run: |
-              sleep 10
+              sleep 100
               docker ps
           shell: bash
