feat: add dm datasource

--- a/.github/actions/setup/dm/action.yml
+++ b/.github/actions/setup/dm/action.yml
@@ -35,12 +35,13 @@ runs:
               -e CHARSET=1 \
               -e LENGTH_IN_CHAR=1 \
               -e CASE_SENSITIVE=0 \
+              -e SYSDBA_PWD='123abc!@#' \
               -v /opt/dm8:/home/dmdba/data \
               sizx/dm8 && docker logs -f dm8
           shell: bash
 
         - name: Verify DM Database is running
           run: |
-              sleep 100
+              sleep 20
               docker ps
           shell: bash
