feat: add dm datasource

--- a/.github/actions/setup/dm/action.yml
+++ b/.github/actions/setup/dm/action.yml
@@ -37,7 +37,7 @@ runs:
               -e CASE_SENSITIVE=0 \
               -e SYSDBA_PWD='123abc!@#' \
               -v /opt/dm8:/home/dmdba/data \
-              sizx/dm8 && docker logs -f dm8
+              sizx/dm8
           shell: bash
 
         - name: Verify DM Database is running
