--- a/.github/actions/service/vectordb/action.yml
+++ b/.github/actions/service/vectordb/action.yml
@@ -56,6 +56,7 @@ runs:
                   echo "Port $port is not open."
                 fi
               done
+              docker ps -a
 
         - if: fromJSON(inputs.start) && runner.os == 'Windows'
           name: Start milvus on Windows
