--- a/.github/workflows/standalone-test.yml
+++ b/.github/workflows/standalone-test.yml
@@ -95,95 +95,95 @@ jobs:
                     "${GITHUB_WORKSPACE}/.github/scripts/test/cli/test_py_register_macos.sh" ${VERSION}
                   fi
 
-            - name: set client test context
-              uses: ./.github/actions/context
-              with:
-                  work-name: restart-iginx-meta
-                  metadata: ${{ matrix.metadata }}
-
-            - name: set client test context
-              uses: ./.github/actions/context
-              with:
-                  DB-name: ${{ matrix.DB-name }}
-                  shell: client-before
-
-            # TODO: extract it to a separate job to test
-            # large image export only tested in FileSystem
-            - name: Test Client Export File
-              if: always()
-              shell: bash
-              run: |
-                  if [[ "${{ matrix.DB-name }}" == "FileSystem" ]]; then
-                      mvn test -q -Dtest=ExportFileIT -DfailIfNoTests=false -P-format
-                  else
-                      mvn test -q -Dtest=ExportFileIT#checkExportByteStream -DfailIfNoTests=false -P-format
-                      mvn test -q -Dtest=ExportFileIT#checkExportCsv -DfailIfNoTests=false -P-format
-                  fi
-
-            - name: Stop IGinX and Metadata, Clear Metadata Data, then Start Them
-              uses: ./.github/actions/context
-              with:
-                  work-name: restart-iginx-meta
-                  metadata: ${{ matrix.metadata }}
-
-            - name: set client test context
-              uses: ./.github/actions/context
-              with:
-                  shell: client-after
-
-            - name: Test Client Import File
-              if: always()
-              shell: bash
-              run: |
-                  mvn test -q -Dtest=ImportFileIT -DfailIfNoTests=false -P-format
-
-            - name: clean metadata and restart IGinX
-              uses: ./.github/actions/context
-              with:
-                  work-name: restart-iginx-meta
-                  metadata: ${{ matrix.metadata }}
-
-            - name: TestController IT
-              if: always()
-              shell: bash
-              env:
-                  METADATA_STORAGE: ${{ matrix.metadata }}
-              run: |
-                  chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/test_union.sh"
-                  mvn test -q -Dtest=Controller -DfailIfNoTests=false -P-format
-
-            - name: Show IGinX log
-              if: always()
-              shell: bash
-              run: |
-                  cat iginx-*.log
-
-            - name: Change IGinX config
-              uses: ./.github/actions/confWriter
-              with:
-                  Set-Key-Range-Test-Policy: "true"
-
-            - name: clean metadata and restart IGinX
-              uses: ./.github/actions/context
-              with:
-                  work-name: restart-iginx-meta
-                  metadata: ${{ matrix.metadata }}
-
-            - name: FilterFragmentRuleTest IT
-              if: always()
-              shell: bash
-              run: |
-                  chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/test_union.sh"
-                  mvn test -q -Dtest=SQLSessionIT#testFilterFragmentOptimizer -DfailIfNoTests=false -P-format
-
-            - name: Show test result
-              if: always()
-              shell: bash
-              run: |
-                  cat ${GITHUB_WORKSPACE}/test/src/test/resources/testResult.txt
+#            - name: set client test context
+#              uses: ./.github/actions/context
+#              with:
+#                  work-name: restart-iginx-meta
+#                  metadata: ${{ matrix.metadata }}
+#
+#            - name: set client test context
+#              uses: ./.github/actions/context
+#              with:
+#                  DB-name: ${{ matrix.DB-name }}
+#                  shell: client-before
+#
+#            # TODO: extract it to a separate job to test
+#            # large image export only tested in FileSystem
+#            - name: Test Client Export File
+#              if: always()
+#              shell: bash
+#              run: |
+#                  if [[ "${{ matrix.DB-name }}" == "FileSystem" ]]; then
+#                      mvn test -q -Dtest=ExportFileIT -DfailIfNoTests=false -P-format
+#                  else
+#                      mvn test -q -Dtest=ExportFileIT#checkExportByteStream -DfailIfNoTests=false -P-format
+#                      mvn test -q -Dtest=ExportFileIT#checkExportCsv -DfailIfNoTests=false -P-format
+#                  fi
+#
+#            - name: Stop IGinX and Metadata, Clear Metadata Data, then Start Them
+#              uses: ./.github/actions/context
+#              with:
+#                  work-name: restart-iginx-meta
+#                  metadata: ${{ matrix.metadata }}
+#
+#            - name: set client test context
+#              uses: ./.github/actions/context
+#              with:
+#                  shell: client-after
+#
+#            - name: Test Client Import File
+#              if: always()
+#              shell: bash
+#              run: |
+#                  mvn test -q -Dtest=ImportFileIT -DfailIfNoTests=false -P-format
+#
+#            - name: clean metadata and restart IGinX
+#              uses: ./.github/actions/context
+#              with:
+#                  work-name: restart-iginx-meta
+#                  metadata: ${{ matrix.metadata }}
+#
+#            - name: TestController IT
+#              if: always()
+#              shell: bash
+#              env:
+#                  METADATA_STORAGE: ${{ matrix.metadata }}
+#              run: |
+#                  chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/test_union.sh"
+#                  mvn test -q -Dtest=Controller -DfailIfNoTests=false -P-format
 
             - name: Show IGinX log
               if: always()
               shell: bash
               run: |
                   cat iginx-*.log
+
+#            - name: Change IGinX config
+#              uses: ./.github/actions/confWriter
+#              with:
+#                  Set-Key-Range-Test-Policy: "true"
+#
+#            - name: clean metadata and restart IGinX
+#              uses: ./.github/actions/context
+#              with:
+#                  work-name: restart-iginx-meta
+#                  metadata: ${{ matrix.metadata }}
+#
+#            - name: FilterFragmentRuleTest IT
+#              if: always()
+#              shell: bash
+#              run: |
+#                  chmod +x "${GITHUB_WORKSPACE}/.github/scripts/test/test_union.sh"
+#                  mvn test -q -Dtest=SQLSessionIT#testFilterFragmentOptimizer -DfailIfNoTests=false -P-format
+#
+#            - name: Show test result
+#              if: always()
+#              shell: bash
+#              run: |
+#                  cat ${GITHUB_WORKSPACE}/test/src/test/resources/testResult.txt
+#
+#            - name: Show IGinX log
+#              if: always()
+#              shell: bash
+#              run: |
+#                  cat iginx-*.log
