--- a/dataSource/pom.xml
+++ b/dataSource/pom.xml
@@ -45,6 +45,7 @@
 
     <properties>
         <maven.deploy.skip>true</maven.deploy.skip>
+        <milvus.version>2.4.7</milvus.version>
     </properties>
 
     <dependencies>
@@ -100,6 +101,7 @@
                             <phase>package</phase>
                             <configuration>
                                 <target>
+                                    <delete file="target/${project.artifactId}-${project.version}/driver/${project.artifactId}/milvus-sdk-java-${milvus.version}.jar"/>
                                     <copy todir="../../core/target/iginx-core-${project.version}/driver">
                                         <fileset dir="target/${project.artifactId}-${project.version}/driver"/>
                                     </copy>
