--- a/test/src/test/resources/testConfig.properties
+++ b/test/src/test/resources/testConfig.properties
@@ -1,6 +1,6 @@
 # the storage engine that you want to test
 #storageEngineList=iotdb12
-storageEngineList=IoTDB12,InfluxDB,FileSystem,Relational,MongoDB,Redis
+storageEngineList=IoTDB12,InfluxDB,FileSystem,Relational,MongoDB,Redis,VectorDB
 relationalStorageEngineList=PostgreSQL,MySQL
 
 # the test for every engine
