--- a/test1/pom.xml
+++ b/test1/pom.xml
@@ -67,5 +67,11 @@
             <artifactId>slf4j-api</artifactId>
             <version>1.7.36</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>3.9.2</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
