--- a/.github/workflows/standalone-test-pushdown.yml
+++ b/.github/workflows/standalone-test-pushdown.yml
@@ -17,7 +17,8 @@ on:
                 description: "The operating system to run the test on"
                 type: string
                 required: false
-                default: '["ubuntu-latest", "macos-latest", "windows-latest"]'
+#                default: '["ubuntu-latest", "macos-latest", "windows-latest"]'
+                default: '["ubuntu-latest"]'
             metadata-matrix:
                 description: "The metadata to run the test on"
                 type: string
@@ -27,7 +28,8 @@ on:
                 description: "The database to run the test on"
                 type: string
                 required: false
-                default: '["IoTDB12", "InfluxDB", "FileSystem", "PostgreSQL", "Redis", "MongoDB", "MySQL", "VectorDB"]'
+#                default: '["IoTDB12", "InfluxDB", "FileSystem", "PostgreSQL", "Redis", "MongoDB", "MySQL", "VectorDB"]'
+                default: '["VectorDB"]'
 
 jobs:
     Union-DB-Test-Push_Down:
