feat: add dm datasource

--- a/dataSource/relational/src/main/resources/dm-meta.properties
+++ b/dataSource/relational/src/main/resources/dm-meta.properties
@@ -18,30 +18,30 @@
 # Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
 #
 
-# ???
+# 驱动类
 driver_class=dm.jdbc.driver.DmDriver
-# ?????
-default_database=dm
-# ??????????
+# 默认数据库
+default_database=DAMENG
+# 系统数据库，用于过滤
 system_databases=performance_schema,information_schema,sys
-# ?????????????
+# 用于包裹表名和字段名的引号
 quote="
-# ??????SQL??
+# 删除数据库的SQL语句
 drop_database_statement=DROP DATABASE IF EXISTS %s;
-# ?JDBC??getTables????????
-jdbc_need_quote=true
-# ????????SQL??
+# 在JDBC使用getTables时是否需要加引号
+jdbc_need_quote=false
+# 获取数据库列表的SQL语句
 database_query_sql=SELECT SCHEMA_NAME AS datname FROM information_schema.schemata;
-# ????full join
+# 是否支持full join
 is_support_full_join=false
-# filter????????
+# filter中正则匹配的符号
 regex_like_symbol=REGEXP_LIKE
-# filter????????????
+# filter中不匹配正则表达式的符号
 not_regex_like_symbol=NOT REGEXP_LIKE
-# jdbc???????????????
+# jdbc元数据获取是否支持特殊字符识别
 jdbc_support_special_char=true
 
-# ?? DataTypeTransformer
+# 配置dm DataTypeTransformer
 TINYINT=IGinX-BOOLEAN
 SMALLINT=IGinX-INTEGER
 MEDIUMINT=IGinX-INTEGER
