--- a/.github/workflows/tpc-h.yml
+++ b/.github/workflows/tpc-h.yml
@@ -114,6 +114,14 @@ jobs:
                   mvn clean package -DskipTests -P-format -q
                   cp -rf ${GITHUB_WORKSPACE}/test/src/test/resources/tpch/udf/* core/target/iginx-core-${VERSION}/udf_funcs/python_scripts/
 
+            - name: Change Old IGinX Config
+              uses: ./.github/actions/confWriter
+              with:
+                  DB-name: ${{ matrix.DB-name }}
+                  Push-Down: "true"
+                  Metadata: ${{ matrix.metadata }}
+                  Root-Dir-Path: "IGinX"
+
             - name: Install New IGinX with Maven
               shell: bash
               run: mvn clean package -DskipTests -P-format -q
