feat: add dm datasource

--- a/dataSource/relational/src/main/resources/dm-meta.properties
+++ b/dataSource/relational/src/main/resources/dm-meta.properties
@@ -54,8 +54,8 @@ DECIMAL=IGinX-DOUBLE
 
 
 IGinX-INTEGER=INTEGER
-IGinX-FLOAT=FLOAT(12,6)
-IGinX-DOUBLE=DOUBLE(22,11)
+IGinX-FLOAT=FLOAT
+IGinX-DOUBLE=DOUBLE
 IGinX-BOOLEAN=TINYINT
 IGinX-BINARY=TEXT
 IGinX-LONG=BIGINT
