--- a/test/src/test/resources/testConfig.properties
+++ b/test/src/test/resources/testConfig.properties
@@ -69,7 +69,8 @@ VectorDB_port=19530,19531,19532
 
 # Local test stand-alone
 #stand_alone_DB=IoTDB12
-stand_alone_DB=VectorDB
+#stand_alone_DB=VectorDB
+stand_alone_DB=Redis
 
 # Local test DB-CE
 is_scaling=false
