--- a/.github/workflows/standalone-test-pushdown.yml
+++ b/.github/workflows/standalone-test-pushdown.yml
@@ -29,7 +29,7 @@ on:
                 type: string
                 required: false
                 #                default: '["IoTDB12", "InfluxDB", "FileSystem", "PostgreSQL", "Redis", "MongoDB", "MySQL", "VectorDB"]'
-                default: '["VectorDB"]'
+                default: '["Redis"]'
 
 jobs:
     Union-DB-Test-Push_Down:
