--- a/.github/workflows/tpc-h.yml
+++ b/.github/workflows/tpc-h.yml
@@ -28,7 +28,7 @@ on:
                 type: string
                 required: false
                 #                default: '["IoTDB12", "InfluxDB", "FileSystem", "PostgreSQL", "Redis", "MongoDB", "MySQL", "VectorDB"]'
-                default: '["Redis"]'
+                default: '["VectorDB"]'
 
 jobs:
     TPC-H-Test:
