--- a/.github/actions/tpchDataWriter/action.yml
+++ b/.github/actions/tpchDataWriter/action.yml
@@ -9,10 +9,39 @@ inputs:
 runs:
     using: "composite" # Mandatory parameter
     steps:
+        - name: Start Old IGinX
+          shell: bash
+          run: |
+              cd IGinX/core/target/iginx-core-${VERSION}
+              pwd
+              export IGINX_HOME=$PWD
+              echo "IGinX home path: $IGINX_HOME"
+              cd ..
+              chmod +x iginx-core-${VERSION}/sbin/start_iginx.sh
+              nohup iginx-core-${VERSION}/sbin/start_iginx.sh > ../../iginx-${VERSION}.log 2>&1 &
+
+        # two IGinXs are using different ZKs, we need to insert data & register UDFs in both nodes
+        - name: Insert Data and Register UDF in Old IGinX
+          shell: bash
+          run: |
+              cd IGinX
+              mvn test -q -Dtest=TPCHDataGeneratorIT -DfailIfNoTests=false -P-format
+
+        - name: Show Old IGinX log
+          if: always()
+          shell: bash
+          run: cat IGinX/iginx-*.log
+
+        - name: Stop Old IGinX
+          uses: ./.github/actions/iginxRunner
+          with:
+              version: ${VERSION}
+              if-stop: "true"
+
         - name: Start New IGinX
           uses: ./.github/actions/iginxRunner
 
-        - name: Insert Data and Register UDF
+        - name: Insert Data and Register UDF in new IGinX
           shell: bash
           run: mvn test -q -Dtest=TPCHDataGeneratorIT -DfailIfNoTests=false -P-format
 
