--- a/.github/workflows/standard-test-suite.yml
+++ b/.github/workflows/standard-test-suite.yml
@@ -27,10 +27,10 @@ jobs:
         uses: ./.github/workflows/standalone-test-pushdown.yml
         with:
             metadata-matrix: '["zookeeper"]'
-#    db-ce:
-#        uses: ./.github/workflows/DB-CE.yml
-#        with:
-#            metadata-matrix: '["zookeeper"]'
+    db-ce:
+        uses: ./.github/workflows/DB-CE.yml
+        with:
+            metadata-matrix: '["zookeeper"]'
 #    remote-test:
 #        uses: ./.github/workflows/remote-test.yml
 #        with:
