--- a/.github/workflows/tpc-h.yml
+++ b/.github/workflows/tpc-h.yml
@@ -27,8 +27,7 @@ on:
                 description: "The database to run the test on"
                 type: string
                 required: false
-                #                default: '["IoTDB12", "InfluxDB", "FileSystem", "PostgreSQL", "Redis", "MongoDB", "MySQL", "VectorDB"]'
-                default: '["VectorDB"]'
+                default: '["IoTDB12", "InfluxDB", "FileSystem", "PostgreSQL", "Redis", "MongoDB", "MySQL"]'
 
 jobs:
     TPC-H-Test:
@@ -76,16 +75,13 @@ jobs:
                     systeminfo | findstr /C:"Total Physical Memory"
                   fi
 
-            - name: Download TPC-H Data
-              shell: bash
-              run: |
-                  wget https://github.com/IGinX-THU/IGinX-resources/raw/main/resources/tpc.7z
-                  sudo apt-get install p7zip-full
-                  7za x tpc.7z
-                  ls tpc
-
-            - name: Run ZooKeeper
+            - name: Run ZooKeeper1
               uses: ./.github/actions/zookeeperRunner
+
+            - name: Run ZooKeeper2
+              uses: ./.github/actions/zookeeperRunner
+              with:
+                  port: 2182
 
             - name: Run DB
               uses: ./.github/actions/dbRunner
@@ -102,18 +98,35 @@ jobs:
                   cp -f test/src/test/resources/testConfig.properties IGinX/test/src/test/resources/testConfig.properties
             # 新增tpc-h查询测试时，旧版本代码中没有这些查询，需从新分支复制过去，添加完所有的tpc_h测试后可删除这些复制命令
 
+            - name: Download TPC-H Data
+              shell: bash
+              run: |
+                  wget https://github.com/IGinX-THU/IGinX-resources/raw/main/resources/tpc.7z
+                  sudo apt-get install p7zip-full
+                  7za x tpc.7z
+                  ls tpc
+                  cp -r tpc IGinX/tpc
+                  ls IGinX/tpc
+
+            # let old iginx use second database service
+            - name: Find second port for DB
+              id: find-port
+              uses: ./.github/actions/service/portMapper
+              with:
+                  DB-name: ${{ matrix.DB-name }}
+
             - name: Rewrite DB Conf in Old IGinX
               uses: ./.github/actions/dbConfWriter
               with:
                   DB-name: ${{ matrix.DB-name }}
                   Root-Dir-Path: "IGinX"
+                  DB-port: ${{ steps.find-port.outputs.port2 }}
 
             - name: Install Old IGinX with Maven
               shell: bash
               run: |
                   cd IGinX
                   mvn clean package -DskipTests -P-format -q
-                  cp -rf ${GITHUB_WORKSPACE}/test/src/test/resources/tpch/udf/* core/target/iginx-core-${VERSION}/udf_funcs/python_scripts/
 
             - name: Change Old IGinX Config
               uses: ./.github/actions/confWriter
@@ -122,6 +135,7 @@ jobs:
                   Set-Filter-Fragment-OFF: "true"
                   Metadata: ${{ matrix.metadata }}
                   Root-Dir-Path: "IGinX"
+                  zookeeper-port: "2182"
 
             - name: Install New IGinX with Maven
               shell: bash
