--- a/.github/actions/service/vectordb/action.yml
+++ b/.github/actions/service/vectordb/action.yml
@@ -29,13 +29,11 @@ runs:
         - if: fromJSON(inputs.start)
           name: Create Config for milvus docker compose
           shell: bash
-          working-directory: ${{ github.action_path }}
+          working-directory: ${{ github.workspace }}
           run: |
-              pwd
-              echo ${{ github.workspace }}
               for port in ${{ inputs.ports }}; do
                 mkdir -p $port
-                cp -f ${{ github.workspace }}/docker/milvus/docker-compose.yml $port/docker-compose-$port.yml
+                cp -f docker/milvus/docker-compose.yml $port/docker-compose-$port.yml
                 sed -i"" -e "s/19530:19530/$port:19530/g" $port/docker-compose-$port.yml
                 sed -i"" -e "s/\/volumes/\/volumes$port/g" $port/docker-compose-$port.yml
                 sed -i"" -e "s/name: milvus/name: milvus$port/g" $port/docker-compose-$port.yml
