--- a/.github/workflows/standard-test-suite.yml
+++ b/.github/workflows/standard-test-suite.yml
@@ -31,22 +31,20 @@ jobs:
         uses: ./.github/workflows/DB-CE.yml
         with:
             metadata-matrix: '["zookeeper"]'
-#    remote-test:
-#        uses: ./.github/workflows/remote-test.yml
-#        with:
-#            metadata-matrix: '["zookeeper"]'
-#    assembly-test:
-#        uses: ./.github/workflows/assembly-test.yml
-
-#    tpc-h-regression-test:
-#        uses: ./.github/workflows/tpc-h.yml
-#        with:
-#            os-matrix: '["ubuntu-latest"]'
-#            metadata-matrix: '["zookeeper"]'
-#    tpc-h-regression-test-pushdown:
-#        uses: ./.github/workflows/tpc-h-pushdown.yml
-#        with:
-#            os-matrix: '["ubuntu-latest"]'
-#            metadata-matrix: '["zookeeper"]'
-#            db-matrix: '["VectorDB"]'
-#            db-matrix: '["InfluxDB", "FileSystem", "PostgreSQL", "Redis", "MongoDB", "MySQL"]'
+    remote-test:
+        uses: ./.github/workflows/remote-test.yml
+        with:
+            metadata-matrix: '["zookeeper"]'
+    assembly-test:
+        uses: ./.github/workflows/assembly-test.yml
+    tpc-h-regression-test:
+        uses: ./.github/workflows/tpc-h.yml
+        with:
+            os-matrix: '["ubuntu-latest"]'
+            metadata-matrix: '["zookeeper"]'
+    tpc-h-regression-test-pushdown:
+        uses: ./.github/workflows/tpc-h-pushdown.yml
+        with:
+            os-matrix: '["ubuntu-latest"]'
+            metadata-matrix: '["zookeeper"]'
+            db-matrix: '["InfluxDB", "FileSystem", "PostgreSQL", "Redis", "MongoDB", "MySQL"]'
