--- a/.github/workflows/standalone-test-pushdown.yml
+++ b/.github/workflows/standalone-test-pushdown.yml
@@ -17,7 +17,8 @@ on:
                 description: "The operating system to run the test on"
                 type: string
                 required: false
-                default: '["ubuntu-latest", "macos-latest", "windows-latest"]'
+                default: '["ubuntu-latest", "macos-latest"]'
+#                default: '["ubuntu-latest", "macos-latest", "windows-latest"]'
             metadata-matrix:
                 description: "The metadata to run the test on"
                 type: string
