--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -18,7 +18,7 @@ on:
                 type: string
                 required: false
                 default: '["ubuntu-latest", "macos-latest"]'
-#                default: '["ubuntu-latest", "macos-latest", "windows-latest"]'
+            #                default: '["ubuntu-latest", "macos-latest", "windows-latest"]'
             metadata-matrix:
                 description: "The metadata to run the test on"
                 type: string
@@ -35,7 +35,8 @@ env:
 
 jobs:
     DB-CE:
-        timeout-minutes: 120
+        #        timeout-minutes: 120
+        timeout-minutes: 360
         strategy:
             fail-fast: false
             matrix:
